--- a/_includes/lead.html
+++ b/_includes/lead.html
@@ -1,4 +1,4 @@
-<div id="lead" style="background: url({{ site.lead_backgroud_img_url }})">
+<div id="lead" style="background-size: cover;">
     <div id="lead-content">
         <h1>{{ site.lead_name}}</h1>
         <h2>{{ site.lead_subtitle }}</h2>
