--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,7 +1,8 @@
 <div id="contact">
     <h2>Get in Touch</h2>
     <div id="contact-form">
-        <form method="POST" action="https://formspree.io/{{ site.form_email}}">
+        <form method="POST" action="https://formspree.io/{{ site.form_email }}">
+            <input type="hidden" name="_next" value="{{ site.root_path }}" />
             <input type="hidden" name="_subject" value="Contact request from personal website" />
             <input type="email" name="_replyto" placeholder="Your email" >
             <textarea name="message" placeholder="Your message" required="required"></textarea>
