--- a/_includes/education.html
+++ b/_includes/education.html
@@ -2,10 +2,13 @@
     <h2 class="heading">Education</h2>
     {% for edu in site.educations %}
     <div class="education-block">
-        <h3>{{ edu.school_name }}</h3>
+        <a href="{{ edu.url }}"><h3>{{ edu.school_name }}</h3></a>
         <span class="education-date">{{edu.dates}}</span>
         <h4>{{ edu.title }}</h4>
-        <p>{{ edu.description }}</p>
+        <p> {% if edu.speciality %} Speciality: {{ edu.speciality }} <br/>{% endif %}
+            {% if edu.thesis %} Thesis: {{ edu.thesis }} <br/>{% endif %}
+            {% if edu.advisor %} Advisor: {{ edu.advisor }} <br/>{% endif %} </p>
+        <small>Related: {{ edu.related}}</small>
     </div>
     {% endfor %}
 </div>
