--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="google-site-verification" content="jIKncvUkI_lhMP2Qoscu90po82BfihbZFLqJluYHMs8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="{{ site.description }}">
 <link rel="shortcut icon" href="favicon.ico" />
 
