--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -5,10 +5,10 @@
             {% for proj in site.projects %}
             <div class="project shadow-large">
                 <div class="project-image">
-                    <img src="{{ proj.img_url }}" />
+                    <img src="{{ proj.img_url }}" alt="{{ proj.name }}" />
                 </div>
                 <div class="project-info">
-                    <h3>{{ proj.name}}</h3>
+                    <h3>{{ proj.name }}</h3>
                     <p>{{ proj.description }}</p>
                     <a href="{{ proj.url }}">View Project</a>
                 </div>
