--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,14 +4,8 @@
         {% include head.html %}
     </head>
     <body>
-        {% include menu_header.html %}
-        {% include lead.html %}
-        {% include about.html %}
-        {% include experience.html %}
-        {% include education.html %}
-        {% include projects.html %}
-        {% include skills.html %}
-        {% include contact.html %}
+        {% include navbar.html %}
+        {{ content }}
         {% include footer.html %}
     </body>
 </html>
