--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,27 +1,17 @@
+<footer class="footer">
+    <div class="container">
+        <span class="text-muted">Copyright &copy; {{ site.time | date: '%Y' }} {{ site.title }}. All Rights Reserved.
+        </span>
+    </div>
+</footer>
+
 <footer>
     <div class="container">
         <div class="row">
             <div class="col-sm-5 copyright">
                 <p>
-                    Copyright &copy; {{ site.time | date: '%Y' }} {{ site.copyright_name }}.
-                    All Rights Reserved.
+
                 </p>
-            </div>
-            <div class="col-sm-2 top">
-                <a href="#">
-                    <span id="to-top">
-                        <i class="fa fa-chevron-up" aria-hidden="true"></i>
-                    </span>
-                </a>
-            </div>
-            <div class="col-sm-5 social">
-                <ul>
-                    {% for button in site.social_buttons %}
-                        <li>
-                            <a href="{{ button.url }}" target="_blank"><i class="fa fa-{{ button.iconkey }}" aria-hidden="true"></i></a>
-                        </li>
-                    {% endfor %}
-                </ul>
             </div>
         </div>
     </div>
