--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,14 +1,11 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="google-site-verification" content="jIKncvUkI_lhMP2Qoscu90po82BfihbZFLqJluYHMs8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="{{ site.description }}">
 <link rel="shortcut icon" href="favicon.ico" />
 
 <title>{{ site.title }}</title>
 
-<link rel="stylesheet" href="assets/libs/font-awesome/css/font-awesome.min.css">
-<link rel="stylesheet" href="assets/libs/boostrap/bootstrap.min.css" >
+
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.1.2/cyborg/bootstrap.min.css" >
 <link rel="stylesheet" href="assets/css/main.css" >
-<script src="assets/libs/jquery/jquery-3.2.0.min.js"></script>
-<script src="assets/js/main.js"></script>
