--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,18 +1,7 @@
 <footer class="footer">
     <div class="container">
-        <span class="text-muted">Copyright &copy; {{ site.time | date: '%Y' }} {{ site.title }}. All Rights Reserved.
+        <span class="text-muted">
+            Copyright &copy; {{ site.time | date: '%Y' }} {{ site.title }}. All Rights Reserved. Created by <a href="https://ipepe.pl/">Patryk Ptasiński</a>
         </span>
-    </div>
-</footer>
-
-<footer>
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-5 copyright">
-                <p>
-
-                </p>
-            </div>
-        </div>
     </div>
 </footer>
