--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,5 +1,9 @@
 <div class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
     <div class="container">
-        <a href="/" class="navbar-brand">{{ site.title }} </a>
+        <a href="/" class="navbar-brand">
+            <h4 style="margin: 0px">
+                ELOSHAV
+            </h4>
+        </a>
     </div>
 </div>
