--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -31,3 +31,7 @@ body {
 .container .text-muted {
     margin: 20px 0;
 }
+
+* {
+    font-family: 'Bahnschrift SemiBold', "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+}
