--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,4 +8,4 @@
 
 
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.1.2/cyborg/bootstrap.min.css" >
-<link rel="stylesheet" href="assets/css/main.css" >
+<link rel="stylesheet" href="/assets/css/app.css" >
