--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,10 +2,10 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="{{ site.description }}">
+<meta property="og:image" content="https://eloshav.com/favicon.png" />
+<meta name="theme-color" content="#000000">
 <link rel="shortcut icon" href="favicon.png" />
-
+<link rel="manifest" href="manifest.json" />
+<script src="assets/js/pwabuilder-sw-register.js"></script>
 <title>{{ site.title }}</title>
-
-
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.1.2/cyborg/bootstrap.min.css" >
 <link rel="stylesheet" href="assets/css/app.css" >
