Fixed fonts and phone RWD

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,4 +8,5 @@
 <link rel="manifest" href="manifest.json" />
 <script src="assets/js/pwabuilder-sw-register.js"></script>
 <title>{{ site.title }}</title>
+<!--<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,700" >-->
 <link rel="stylesheet" href="assets/css/app.css" >
