--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,9 +1,11 @@
 <div class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
     <div class="container">
-        <a href="/" class="navbar-brand">
-            <h4 style="margin: 0px">
-                ELOSHAV
-            </h4>
-        </a>
+        <center>
+            <a href="/" class="navbar-brand">
+                <h4 style="margin: 0px">
+                    ELOSHAV
+                </h4>
+            </a>
+        </center>
     </div>
 </div>
