--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,11 +1,13 @@
 <div class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
     <div class="container">
-        <center>
-            <a href="/" class="navbar-brand">
-                <h4 style="margin: 0px">
-                    ELOSHAV
-                </h4>
-            </a>
-        </center>
+        <div class="row">
+            <div class="col-md-6 col-md-offset-5">
+                <a href="/" class="navbar-brand">
+                    <h4 style="margin: 0px">
+                        ELOSHAV
+                    </h4>
+                </a>
+            </div>
+        </div>
     </div>
 </div>
