--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,4 +1,4 @@
-<div class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
+<div class="navbar navbar-expand-lg fixed-top bg-dark navbar-inverse">
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-md-offset-5">
