--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,12 +1,16 @@
 <div class="navbar navbar-expand-lg fixed-top bg-dark navbar-inverse">
     <div class="container">
         <div class="row">
-            <div class="col-md-6 col-md-offset-5">
+            <div class="col-md-5 col-md-offset-5">
                 <a href="/" class="navbar-brand">
                     <h4 style="margin: 0px">
                         ELOSHAV
                     </h4>
                 </a>
+            </div>
+            <div class="col-md-2">
+                <a href='https://www.free-counters.org/'>powered by Free-Counters</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=19328cc14ef51dcebdbbbdd7810919229cdf53fb'></script>
+                <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/399413/t/5"></script>
             </div>
         </div>
     </div>
