--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="footer">
     <div class="container center-block text-center">
         <span class="text-muted">
-            Copyright &copy; {{ site.time | date: '%Y' }} {{ site.title }}. All Rights Reserved. Created by <a href="https://ipepe.pl/">Patryk Ptasiński</a>
+            Copyright &copy; 2018-{{ site.time | date: '%Y' }} {{ site.title }}. All Rights Reserved. Created by <a href="https://ipepe.pl/">Patryk Ptasiński</a>
         </span>
     </div>
 </footer>
